--- a/package.json
+++ b/package.json
@@ -3,18 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@progress/kendo-data-query": "^1.5.5",
-    "@progress/kendo-drawing": "^1.10.1",
-    "@progress/kendo-licensing": "^1.1.4",
-    "@progress/kendo-react-animation": "^4.6.0",
-    "@progress/kendo-react-data-tools": "^4.6.0",
-    "@progress/kendo-react-dateinputs": "^4.6.0",
-    "@progress/kendo-react-dropdowns": "^4.6.0",
-    "@progress/kendo-react-grid": "^4.6.0",
-    "@progress/kendo-react-inputs": "^4.6.0",
-    "@progress/kendo-react-intl": "^4.6.0",
-    "@progress/kendo-theme-default": "^4.38.1",
-    "@testing-library/jest-dom": "^5.13.0",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/data-grid": "^4.0.0-alpha.31",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/x-grid-data-generator": "^4.0.0-alpha.31",
+    "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@version/react-router-v3": "^1.0.0",
