--- a/package.json
+++ b/package.json
@@ -7,14 +7,32 @@
     "@material-ui/data-grid": "^4.0.0-alpha.31",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/x-grid-data-generator": "^4.0.0-alpha.31",
+    "@progress/kendo-data-query": "^1.5.5",
+    "@progress/kendo-drawing": "^1.10.1",
+    "@progress/kendo-licensing": "^1.1.4",
+    "@progress/kendo-react-animation": "^4.7.0",
+    "@progress/kendo-react-buttons": "^4.7.0",
+    "@progress/kendo-react-data-tools": "^4.7.0",
+    "@progress/kendo-react-dateinputs": "^4.7.0",
+    "@progress/kendo-react-dropdowns": "^4.7.0",
+    "@progress/kendo-react-grid": "^4.7.0",
+    "@progress/kendo-react-inputs": "^4.7.0",
+    "@progress/kendo-react-intl": "^4.7.0",
+    "@progress/kendo-react-treeview": "^4.7.0",
+    "@progress/kendo-theme-default": "^4.39.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@version/react-router-v3": "^1.0.0",
     "axios": "^0.21.1",
+    "namor": "^2.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-router": "^3.2.6",
     "react-scripts": "4.0.3",
+    "react-table": "^7.7.0",
+    "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
