--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-loader": "^2.4.7",
     "react-router": "^3.2.6",
     "react-scripts": "4.0.3",
     "react-table": "^7.7.0",
